<resources>
    <string name="app_name">MAndroid</string>
    <string name="hello_world">Hello World!</string>
    <string name="welcome_to_android">Welcome to Android</string>
    <string name="button_view">VIEW MY CONTACTS</string>
    <string name="button_edit_profile">Edit profile</string>
    <string name="label_settings">Settings</string>
    <string name="label_name">Name</string>
    <string name="label_career">Career</string>
    <string name="label_address">Address</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="label_sign_in">Sign in</string>
    <string name="label_terms_and_conditions">By clicking Register you agree to our Terms \n and Conditions</string>
    <string name="register">REGISTER</string>
    <string name="label_or">or</string>
    <string name="button_google">GOOGLE</string>
    <string name="label_lets_get_acquainted">Let\'s get acquainted</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="label_remember_me">Remember me</string>
    <string name="label_fill_out_the_profile">Fill out the profile and go to the application!</string>
    <string name="REGEX_PASSWORD_MATCH">([a-zA-Z])(\\d)|(\\d)([a-zA-Z])</string>
    <string name="GLOBAL_EMAIL">email</string>
    <string name="EMAIL_ERROR">Enter correct email</string>
    <string name="ERROR_SHORT_PASSWORD">Password must be at least 8 characters</string>
    <string name="ERROR_NOT_VALID_PASSWORD">Password must contain numbers and letters</string>
</resources>